--- a/todo
+++ b/todo
@@ -2,4 +2,4 @@ Sensorwert History/Details bei Klick auf Abschnitt Links
 
 Übersicht. SW Status, Alle Parameter, Restart der SW
 
-Code Comments
+Code Comments, Doku Ablauf anhand Bild draw.io
