--- a/todo
+++ b/todo
@@ -3,3 +3,5 @@ Sensorwert History/Details bei Klick auf Abschnitt Links
 Übersicht. SW Status, Alle Parameter, Restart der SW
 
 Code Comments, Doku Ablauf anhand Bild draw.io
+
+Betriebsmodus Start, Pause, Reset
