--- a/todo
+++ b/todo
@@ -1,7 +1,9 @@
 python to logfile -> show in Browser, delete log on start of sw
 
 
-Gesamtstatistik(betriebsstunden,etc)
+zeitbalken -> Parameter erweitern
+
+
 Sensorwert History/Details bei Klick auf Abschnitt Links
 Übersicht. SW Status, Alle Parameter, Restart der SW
 
