--- a/todo
+++ b/todo
@@ -1,14 +1,9 @@
-Log in Browser
-
-
 zeitbalken -> Parameter erweitern
 
-
 Sensorwert History/Details bei Klick auf Abschnitt Links
+
 Übersicht. SW Status, Alle Parameter, Restart der SW
 
-
-Code Comments, Doku Ablauf anhand Bild draw.io
-
+Doku Ablauf anhand Bild draw.io
 
 Betriebsmodus Start, Pause, Reset
