--- a/todo
+++ b/todo
@@ -1,3 +1,8 @@
+Manuelle Aktoransteuerung
+SW Status
+I2C Status
+Wenn Countdown 0 -> Stop Program
+
 php herunterfahren -> DB Eintrag -> grundstellung -> herunterfahren
 Licht Parameter im 0.5h Takt
 Alle Stunde Lüfter Gross und Tür auf -> lüften
