--- a/todo
+++ b/todo
@@ -1,2 +1,4 @@
-python und php manuelle aktorsteuerung
+manuelle steuerung per DB
+i2c und sw status per button
+meldungen ein Bild links
 index.html l auf dl
