--- a/todo
+++ b/todo
@@ -2,3 +2,5 @@ manuelle steuerung per DB
 i2c und sw status per button
 meldungen ein Bild links
 index.html l auf dl
+auto oder hand statusanzeige
+DB Online statusanzeige
