--- a/todo
+++ b/todo
@@ -1,6 +1,6 @@
 manuelle steuerung per DB
 i2c und sw status per button
 meldungen ein Bild links
-index.html l auf dl
+Endzeit besseres ui
 auto oder hand statusanzeige
 DB Online statusanzeige
