--- a/todo
+++ b/todo
@@ -3,3 +3,4 @@ Auf Desktop -> Start Interface
 Fernwartung ein/aus
 Speicherplatz und weiteres anzeigen
 Full SD Backup
+Interface und Scripts auf USB
